--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <h1>Driving</h1>
   <main id="main-container"></main>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r72/three.min.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/three.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
+
+  <script type="text/javascript" src="js/tiles.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
