Script for downloading everything as a zip

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
   <h1>Driving</h1>
+  <button type="button" id="save-all">Save All</button>
   <main id="main-container"></main>
 
+  <section id="tiles"></section>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2014-11-29/FileSaver.min.js"></script>
   <script type="text/javascript" src="js/lib/threejs/three.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
