--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
   <link href="css/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <aside id="tiles-container" class="panel panel-left">
+    <h3>Insert Tiles</h3>
+    <ul class="tiles"></ul>
+  </aside>
   <main id="main-container"></main>
 
+  <script type="text/javascript" src="js/lib/xr/xr.js"></script>
+  <script type="text/javascript" src="js/lib/uri/URI.js"></script>
   <script type="text/javascript" src="js/lib/threejs/three.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/controls/TrackballControls.js"></script>
 
   <script type="text/javascript" src="js/tiles.js"></script>
+  <script type="text/javascript" src="js/editor.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
