Added a panel for controls and made it so that camera controls only apply to the canvas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <h3>Insert Tiles</h3>
     <ul class="tiles"></ul>
   </aside>
+  <aside id="controls" class="panel panel-right">
+    <h3>Controls</h3>
+    <p><small>
+        MOVE mouse &amp; press<br>
+        LEFT: rotate, MIDDLE: zoom, RIGHT: pan
+    </small></p>
+  </aside>
+
   <main id="main-container"></main>
 
   <script type="text/javascript" src="js/lib/xr/xr.js"></script>
