Adjusted controls text a bit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <aside id="controls" class="panel panel-right">
     <h3>Controls</h3>
     <p><small>
-        MOVE mouse &amp; press<br>
+        MOVE mouse &amp; press - <br>
         LEFT: rotate, MIDDLE: zoom, RIGHT: pan
     </small></p>
   </aside>
