Added two types of controls

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="js/lib/threejs/three.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/controls/TransformControls.js"></script>
   <script type="text/javascript" src="js/lib/threejs/controls/TrackballControls.js"></script>
 
   <script type="text/javascript" src="js/tiles.js"></script>
