Fixed up CSS with normalize and changed selected style

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Driving</title>
 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href="css/index.css" rel="stylesheet" type="text/css">
@@ -35,7 +36,6 @@
   <script type="text/javascript" src="js/lib/threejs/three.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
-  <script type="text/javascript" src="js/lib/threejs/controls/TransformControls.js"></script>
   <script type="text/javascript" src="js/lib/threejs/controls/TrackballControls.js"></script>
 
   <script type="text/javascript" src="js/tiles.js"></script>
