Added a loading icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <aside id="tiles-container" class="panel panel-left">
-    <h3>Insert Tiles</h3>
+    <h3><i id="loading" class="fa fa-spinner fa-spin"></i>Insert Tiles</h3>
     <ul class="tiles"></ul>
   </aside>
   <aside id="controls-container" class="panel panel-right">
