Changed Controls heading to represent the panel content more

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul class="tiles"></ul>
   </aside>
   <aside id="controls-container" class="panel panel-right">
-    <h3>Controls</h3>
+    <h3>Help &amp; Controls</h3>
     <p><small>
         MOVE mouse &amp; press - LEFT: rotate,<br>
         MIDDLE: zoom, RIGHT: pan
