Added a duplicate button and fixed a bug with selection where the box helper was going off

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <p><small>Click on a tile to select it and use<br>
         the following controls to edit it</small></p>
     <div class="controls">
+      <button id="tile-duplicate" title="Duplicate"><i class="fa fa-clone"></i></button>
       <button id="tile-move-up" title="Move up"><i class="fa fa-arrow-up fa-fw"></i></button>
       <button id="tile-move-down" title="Move down"><i class="fa fa-arrow-down fa-fw"></i></button>
       <button id="tile-rotate" title="Rotate"><i class="fa fa-rotate-right fa-fw"></i></button>
