Made it so that panels become transparent while dragging and pointer events are disabled - fixes a critical bug

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         MOVE mouse &amp; press - LEFT: rotate,<br>
         MIDDLE: zoom, RIGHT: pan
     </small></p>
-    <p><small>Click on a tile to select it and use<br>
+    <p><small>Drag a tile onto the grid &amp; use<br>
         the following controls to edit it</small></p>
     <div class="controls">
       <button id="tile-duplicate" title="Duplicate"><i class="fa fa-clone"></i></button>
