Started implementing actions and fixed several issues

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     </div>
     <hr>
     <div class="history-controls">
-      <button id="tile-undo" title="Undo"><i class="fa fa-mail-reply fa-fw"></i></button>
-      <button id="tile-redo" title="Redo"><i class="fa fa-mail-forward fa-fw"></i></button>
+      <button id="tile-undo" title="Undo" disabled><i class="fa fa-mail-reply fa-fw"></i></button>
+      <button id="tile-redo" title="Redo" disabled><i class="fa fa-mail-forward fa-fw"></i></button>
     </div>
   </aside>
   <aside id="file-controls-container" class="panel panel-right panel-bottom">
     <div class="file-controls">
       <button id="tile-export" title="Export">Export</button>
-      <button id="tile-export" title="Import">Import</button>
+      <button id="tile-import" title="Import">Import</button>
     </div>
   </aside>
 
