--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
   <script type="text/javascript" src="js/lib/xr/xr.js"></script>
   <script type="text/javascript" src="js/lib/uri/URI.js"></script>
+  <script type="text/javascript" src="js/lib/filesaver/FileSaver.js"></script>
   <script type="text/javascript" src="js/lib/threejs/three.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
