--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="file-controls">
       <button id="tile-export" title="Export">Export</button>
       <button id="tile-import" title="Import">Import</button>
+      <input type="file" id="imported-file" style="display:none">
     </div>
   </aside>
 
