Added a command for clearing the map

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </aside>
   <aside id="file-controls-container" class="panel panel-right panel-bottom">
     <div class="file-controls">
+      <button id="tile-clear" title="Clear">Clear</button>
       <button id="tile-export" title="Export">Export</button>
       <button id="tile-import" title="Import">Import</button>
       <input type="file" id="imported-file" style="display:none">
