--- a/index.html
+++ b/index.html
@@ -31,14 +31,7 @@
     <h3><i id="loading" class="fa fa-spinner fa-spin"></i>Insert Tiles</h3>
     <ul class="tiles"></ul>
   </aside>
-  <aside id="controls-container" class="panel panel-right">
-    <h3>Help &amp; Controls</h3>
-    <p><small>
-        MOVE mouse &amp; press - LEFT: rotate,<br>
-        MIDDLE: zoom, RIGHT: pan
-    </small></p>
-    <p><small>Drag a tile onto the grid &amp; use<br>
-        the following controls to edit it</small></p>
+  <aside id="controls-container" class="panel panel-right panel-bottom">
     <div class="controls">
       <button id="tile-duplicate" title="Duplicate"><i class="fa fa-clone fa-fw"></i></button>
       <button id="tile-move-up" title="Move up"><i class="fa fa-arrow-up fa-fw"></i></button>
