Added help link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <button id="tile-import" title="Import">Import</button>
         <input type="file" id="imported-file" style="display:none">
       </div>
+      <div class="help-container">
+        <a href="README.html" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i></a>
+      </div>
     </div>
     <div class="left">
       <span class="site-title">Driving</span>
