--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <input type="file" id="imported-file" style="display:none">
       </div>
       <div class="help-container">
-        <a href="README.html" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i></a>
+        <a href="https://github.com/sunjay/driving/blob/master/README.md" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i></a>
       </div>
     </div>
     <div class="left">
