--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header>
     <div class="right">
       <div class="history-controls">
-        <button id="tile-undo" title="Undo" disabled><i class="fa fa-mail-reply fa-fw"></i></button>
-        <button id="tile-redo" title="Redo" disabled><i class="fa fa-mail-forward fa-fw"></i></button>
+        <button id="tile-undo" title="Undo (Ctrl-z)" disabled><i class="fa fa-mail-reply fa-fw"></i></button>
+        <button id="tile-redo" title="Redo (Ctrl-Shift-z)" disabled><i class="fa fa-mail-forward fa-fw"></i></button>
       </div>
       <div class="file-controls">
         <button id="tile-clear" title="Clear">Clear</button>
@@ -36,11 +36,11 @@
   </aside>
   <aside id="controls-container" class="panel panel-right panel-bottom">
     <div class="controls">
-      <button id="tile-duplicate" title="Duplicate"><i class="fa fa-clone fa-fw"></i></button>
-      <button id="tile-move-up" title="Move up"><i class="fa fa-arrow-up fa-fw"></i></button>
-      <button id="tile-move-down" title="Move down"><i class="fa fa-arrow-down fa-fw"></i></button>
-      <button id="tile-rotate" title="Rotate"><i class="fa fa-rotate-right fa-fw"></i></button>
-      <button id="tile-delete" title="Delete"><i class="fa fa-trash-o fa-fw"></i></button>
+      <button id="tile-duplicate" title="Duplicate (d)"><i class="fa fa-clone fa-fw"></i></button>
+      <button id="tile-move-up" title="Move up (k)"><i class="fa fa-arrow-up fa-fw"></i></button>
+      <button id="tile-move-down" title="Move down (j)"><i class="fa fa-arrow-down fa-fw"></i></button>
+      <button id="tile-rotate" title="Rotate (r)"><i class="fa fa-rotate-right fa-fw"></i></button>
+      <button id="tile-delete" title="Delete (Del/x)"><i class="fa fa-trash-o fa-fw"></i></button>
     </div>
   </aside>
 
