Got split screen working

--- a/pathgenerator.html
+++ b/pathgenerator.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href="css/index.css" rel="stylesheet" type="text/css">
+  <link href="css/pathgenerator.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
@@ -19,7 +20,7 @@
       <span class="site-title">Path Data Generator</span>
     </div>
   </header>
-  <aside id="tiles-container" class="panel panel-left">
+  <aside id="tiles-container" class="panel panel-left panel-bottom">
     <h3>Choose Tile</h3>
     <ul class="tiles"></ul>
   </aside>
