Adjusted cameras and panel locations

--- a/pathgenerator.html
+++ b/pathgenerator.html
@@ -24,9 +24,9 @@
     <h3>Choose Tile</h3>
     <ul class="tiles"></ul>
   </aside>
-  <aside id="tile-info" class="panel panel-right">
+  <aside id="tile-info" class="panel panel-right panel-bottom">
     <h3>Tile Path Information</h3>
-    <p>Select a tile to see information<br>about it here</p>
+    <p>Select a tile to see information about it here</p>
   </aside>
 
   <main id="main-container"></main>
