Made debug info toggleable

--- a/pathgenerator.html
+++ b/pathgenerator.html
@@ -12,6 +12,11 @@
 <body>
   <header>
     <div class="right">
+      <div class="object-controls">
+        TOGGLE:
+        <button id="debug-faces">Faces</button>
+        <button id="debug-vertices">Vertices</button>
+      </div>
       <div class="file-controls">
         <button id="tile-export-paths" title="Export">Export All</button>
       </div>
