Took the midpoint of all faces and added a debug view for that

--- a/pathgenerator.html
+++ b/pathgenerator.html
@@ -16,6 +16,7 @@
         TOGGLE:
         <button id="debug-faces">Faces</button>
         <button id="debug-vertices">Vertices</button>
+        <button id="debug-paths">Paths</button>
       </div>
       <div class="file-controls">
         <button id="tile-export-paths" title="Export">Export All</button>
