--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/controls/TrackballControls.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/geometries/TextGeometry.js"></script>
 
   <script type="text/javascript" src="js/history-queue.js"></script>
   <script type="text/javascript" src="js/tiles.js"></script>
