--- a/pathgenerator.html
+++ b/pathgenerator.html
@@ -43,6 +43,9 @@
   <script type="text/javascript" src="js/lib/threejs/three.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/MTLLoader.js"></script>
   <script type="text/javascript" src="js/lib/threejs/loaders/OBJMTLLoader.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/geometries/TextGeometry.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/utils/FontUtils.js"></script>
+  <script type="text/javascript" src="js/lib/threejs/fonts/helvetiker_regular.typeface.js"></script>
 
   <script type="text/javascript" src="js/history-queue.js"></script>
   <script type="text/javascript" src="js/tiles.js"></script>
