Fixed a bug where paths weren't being connected when rendered. Made labels toggleable

--- a/pathgenerator.html
+++ b/pathgenerator.html
@@ -17,6 +17,7 @@
         <button id="debug-faces">Faces</button>
         <button id="debug-vertices">Vertices</button>
         <button id="debug-paths">Paths</button>
+        <button id="debug-labels">Labels</button>
       </div>
       <div class="file-controls">
         <button id="tile-export-paths" title="Export">Export All</button>
