Base exporter feature

--- a/pathgenerator.html
+++ b/pathgenerator.html
@@ -20,7 +20,7 @@
         <button id="debug-labels">Labels</button>
       </div>
       <div class="file-controls">
-        <button id="tile-export-paths" title="Export">Export All</button>
+        <button id="export-paths" title="Export">Export All</button>
       </div>
     </div>
     <div class="left">
