--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <header>
     <div class="right">
+      <div class="mode-controls">
+        <button id="switch-modes" class="btn-success">Play</button>
+      </div>
       <div class="history-controls">
         <button id="tile-undo" title="Undo (Ctrl-z)" disabled><i class="fa fa-mail-reply fa-fw"></i></button>
         <button id="tile-redo" title="Redo (Ctrl-Shift-z)" disabled><i class="fa fa-mail-forward fa-fw"></i></button>
