Added attention grabbing pulse to play button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="right">
       <div class="mode-controls">
-        <button id="switch-modes" class="btn-success">Play</button>
+        <button id="switch-modes" class="btn-success pulse">Play</button>
       </div>
       <div class="history-controls">
         <button id="tile-undo" title="Undo (Ctrl-z)" disabled><i class="fa fa-mail-reply fa-fw"></i></button>
