Base code for mode toggling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <div class="mode-controls">
         <button id="switch-modes" class="btn-success pulse">Play</button>
       </div>
+      <!-- Play Controls -->
+      <div class="view-controls">
+        <button id="play-show-path">Toggle Path</button>
+      </div>
+      <!-- Editor Controls -->
       <div class="history-controls">
         <button id="tile-undo" title="Undo (Ctrl-z)" disabled><i class="fa fa-mail-reply fa-fw"></i></button>
         <button id="tile-redo" title="Redo (Ctrl-Shift-z)" disabled><i class="fa fa-mail-forward fa-fw"></i></button>
@@ -25,6 +30,7 @@
         <button id="tile-import" title="Import">Import</button>
         <input type="file" id="imported-file" style="display:none">
       </div>
+      <!-- Help -->
       <div class="help-container">
         <a href="https://github.com/sunjay/driving/blob/master/README.md" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i></a>
       </div>
