Basic code to generate graph

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <!-- Play Controls -->
       <div class="view-controls">
-        <button id="play-show-path">Toggle Path</button>
+        <button id="play-toggle-graph">Toggle graph</button>
       </div>
       <!-- Editor Controls -->
       <div class="history-controls">
@@ -65,6 +65,7 @@
   <script type="text/javascript" src="js/lib/threejs/geometries/TextGeometry.js"></script>
 
   <script type="text/javascript" src="js/history-queue.js"></script>
+  <script type="text/javascript" src="js/graph.js"></script>
   <script type="text/javascript" src="js/tiles.js"></script>
   <script type="text/javascript" src="js/editor.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
