Moved play button to a better position

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 <body>
   <header>
     <div class="right">
-      <div class="mode-controls">
-        <button id="switch-modes" class="btn-success pulse">Play</button>
-      </div>
       <!-- Play Controls -->
       <div class="view-controls">
         <button id="play-toggle-graph">Toggle graph</button>
@@ -30,7 +27,10 @@
         <button id="tile-import" title="Import">Import</button>
         <input type="file" id="imported-file" style="display:none">
       </div>
-      <!-- Help -->
+      <!-- General Controls -->
+      <div class="mode-controls">
+        <button id="switch-modes" class="btn-success pulse">Play</button>
+      </div>
       <div class="help-container">
         <a href="https://github.com/sunjay/driving/blob/master/README.md" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i></a>
       </div>
