--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <!-- Play Controls -->
       <div class="view-controls">
         <button id="play-toggle-graph">Toggle graph</button>
+        <button id="play-toggle-labels">Toggle labels</button>
       </div>
       <!-- Editor Controls -->
       <div class="history-controls">
