Moved loading to header

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </div>
     </div>
     <div class="left">
-      <span class="site-title">Driving</span>
+      <span class="site-title">Driving <i id="loading" class="fa fa-spinner fa-spin fa-fw"></i></span>
     </div>
   </header>
   <aside id="tiles-container" class="panel panel-left">
-    <h3><i id="loading" class="fa fa-spinner fa-spin"></i>Insert Tiles</h3>
+    <h3>Insert Tiles</h3>
     <ul class="tiles"></ul>
   </aside>
   <aside id="controls-container" class="panel panel-right panel-bottom">
