Base implementation of an actor class

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
   <script type="text/javascript" src="js/history-queue.js"></script>
   <script type="text/javascript" src="js/graph.js"></script>
+  <script type="text/javascript" src="js/actors.js"></script>
   <script type="text/javascript" src="js/tiles.js"></script>
   <script type="text/javascript" src="js/editor.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
