Randomize button and bugfix for when car wasn't being removed when going back to edit mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <header>
     <div class="right">
       <!-- Play Controls -->
+      <div class="actor-controls">
+        <button id="play-random-position" class="btn-rainbow">Randomize</button>
+      </div>
       <div class="view-controls">
         <button id="play-toggle-graph">Toggle graph</button>
         <button id="play-toggle-labels">Toggle labels</button>
