Implemented select all checkbox for filters

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   </header>
   <aside id="tiles-container" class="panel panel-left">
     <div id="filter-container" class="pull-right">
+      <input type="checkbox" id="tile-filters-toggle-all" class="pull-left" checked>
       <button id="tiles-filter-toggle"><i class="fa fa-search"></i> Filters</button>
       <div class="filter-content">
         <ul id="tile-filters">
