Added icons to play and editor

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="tile-redo" title="Redo (Ctrl-Shift-z)" disabled><i class="fa fa-mail-forward fa-fw"></i></button>
       </div>
       <div class="file-controls">
-        <button id="tile-clear" title="Clear">Clear</button>
+        <button id="tile-clear" title="Clear"><i class="fa fa-ban"></i> Clear</button>
         <span class="header-space"></span>
         <button id="tile-export" title="Export">Export</button>
         <button id="tile-import" title="Import">Import</button>
@@ -33,7 +33,7 @@
       </div>
       <!-- General Controls -->
       <div class="mode-controls">
-        <button id="switch-modes" class="btn-success pulse">Play</button>
+        <button id="switch-modes" class="btn-success pulse"><i class="fa"></i> <span>Play</span></button>
       </div>
       <div class="help-container">
         <a href="https://github.com/sunjay/tile-universe/blob/gh-pages/README.md" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i></a>
