Replaced examples icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="right">
       <!-- Examples loader controls -->
       <div class="examples-controls">
-        <button id="examples-list-toggle">Examples <i class="fa fa-caret-down"></i></button>
+        <button id="examples-list-toggle"><i class="fa fa-lightbulb-o"></i> Examples</button>
         <ul id="examples-list">
           <li class="examples-list-item template"><button class="btn-link">filename.json</button> <a href="http://filename.json" target="_blank" class="button btn-link"><i class="fa fa-external-link fa-fw"></i></a></li>
         </ul>
