Added placeholder thumbnail and styling to examples

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       <div class="examples-controls">
         <button id="examples-list-toggle"><i class="fa fa-lightbulb-o"></i> Examples</button>
         <ul id="examples-list">
-          <li class="examples-list-item template"><button class="btn-link">filename.json</button> <a href="http://filename.json" target="_blank" class="button btn-link"><i class="fa fa-external-link fa-fw"></i></a></li>
+          <li class="examples-list-item template">
+            <img src="http://lorempixel.com/400/200/" alt="example thumbnail">
+            <button class="btn-link">filename.json</button>
+            <a href="http://filename.json" target="_blank" class="button btn-link"><i class="fa fa-external-link fa-fw"></i></a>
+          </li>
         </ul>
       </div>
       <!-- Play Controls -->
