Implemented thumbnail URLs loaded from github's CDN

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="examples-controls">
         <button id="examples-list-toggle"><i class="fa fa-lightbulb-o"></i> Examples</button>
         <ul id="examples-list">
+          <!-- Example item template -->
           <li class="examples-list-item template">
             <img src="http://lorempixel.com/400/200/" alt="example thumbnail">
             <button class="btn-link">filename.json</button>
