Added button for github source code and text for help button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <button id="switch-modes" class="btn-success pulse"><i class="fa"></i> <span>Play</span></button>
       </div>
       <div class="help-container">
-        <a href="https://github.com/sunjay/tile-universe/blob/gh-pages/README.md" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i></a>
+        <a href="https://github.com/sunjay/tile-universe/" target="_blank" class="button" title="GitHub"><i class="fa fa-github"></i> <span>GitHub</span></a>
+        <a href="https://github.com/sunjay/tile-universe/blob/gh-pages/README.md" target="_blank" class="button" title="Help"><i class="fa fa-question-circle"></i> <span>Help</span></a>
       </div>
     </div>
     <div class="left">
